--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,25 @@
-<header>
-  <app-header></app-header>
-</header>
-<section id="app-body" class="page-wrapper flex">
-  <div id="sidebar">
-    <app-sidebar></app-sidebar>
+<!-- 顶部导航 -->
+<nav>
+  <div class="navWrap">
+    <div class="topNavLeft">
+      <span>考拉欢迎你！</span>
+      <a class="login">登录</a>
+      <span class="sep">|</span>
+      <a>免费注册</a>
+    </div>
+    <div class="topNavMiddle">
+      <a>手机考拉</a>
+    </div>
+    <ul class="topNavRight">
+     <li>每日签到</li>
+     <li>每日签到</li>
+     <li>每日签到</li>
+     <li>每日签到</li>
+     <li>每日签到</li>
+    </ul>
   </div>
-  <div id="app-main">
-    <router-outlet></router-outlet>
-  </div>
-</section>
-<footer>
-  <nz-divider></nz-divider>
-  <p id="app-footer">CN-Tower ©2017 Implement By Angular</p>
-</footer>
+</nav>
+<!-- 主体内容区域 -->
+<div class="main-container">
+  <router-outlet></router-outlet>
+</div>
