fix less and add polyfills

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -15,7 +15,7 @@ nav {
       }
       .sep {
        padding: 0 10px;
-       color: #ccc;
+       color: #999;
        visibility: hidden;
       }
     }
@@ -23,9 +23,12 @@ nav {
       float: left;
       padding-left: 30px;
     }
-    a:hover{
-      color: #fff;
-      cursor: pointer;
+    a{
+      color:#999;
+      &:hover{
+        color: #fff;
+        cursor: pointer;
+      }
     }
     .topNavRight {
       float: right;
