--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,11 +11,11 @@
       <a>手机考拉</a>
     </div>
     <ul class="topNavRight">
-     <li>每日签到</li>
-     <li>每日签到</li>
-     <li>每日签到</li>
-     <li>每日签到</li>
-     <li>每日签到</li>
+      <li>每日签到</li>
+      <li>每日签到</li>
+      <li>每日签到</li>
+      <li>每日签到</li>
+      <li>每日签到</li>
     </ul>
   </div>
 </nav>
@@ -23,3 +23,40 @@
 <div class="main-container">
   <router-outlet></router-outlet>
 </div>
+
+<footer>
+  <div class="footer-wrap">
+    <dl>
+      <dt><span title="产品中心">产品中心</span></dt>
+      <dd><span title="实验仪器">实验仪器</span></dd>
+      <dd><span title="通用耗材">通用耗材</span></dd>
+    </dl>
+    <dl>
+      <dt><span title="关于我们">关于我们</span></dt>
+      <dd><span title="联系我们">联系我们</span></dd>
+      <dd><span title="公司简介">公司简介</span></dd>
+      <dd><span title="企业文化">企业文化</span></dd>
+      <dd><span title="新闻资讯">新闻资讯</span></dd>
+    </dl>
+    <dl>
+      <dt><span title="售后服务">售后服务</span></dt>
+      <dd><span title="服务条款">服务条款</span></dd>
+      <dd><span title="隐私政策">隐私政策</span></dd>
+      <dd><span title="订单查询">订单查询</span></dd>
+      <dd><span title="联系客服">联系客服</span></dd>
+    </dl>
+    <dl>
+      <dt><span title="服务支持">服务支持</span></dt>
+      <dd><span title="技术支持">技术支持</span></dd>
+      <dd><span title="下载中心">下载中心</span></dd>
+      <dd><span title="客户留言">客户留言</span></dd>
+    </dl>
+    <div class="weixin">
+      <p>官方微信</p>
+      <img src="assets/images/weixin.jpg">
+    </div>
+  </div>
+  <div class="copy-right">
+    <p>Copyright © 2007-2019网易公司版权所有 京ICP备17022874号-2</p>
+  </div>
+</footer>
