add product center

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,19 +3,31 @@
     <img src="assets/images/kaola.png">
     <nav>
       <ul>
-        <li routerLink="/home" routerLinkActive="active">首页</li>
-        <li>产品中心</li>
-        <li>服务支持</li>
+        <li routerLink="/home" routerLinkActive="active">
+          <span>首页</span>
+        </li>
         <li>
+          <span>产品中心</span>
+        </li>
+        <li>
+          <span>服务支持</span>
+        </li>
+        <li menu-dropDown>
           <span>产品应用</span>
           <ul>
             <li>应用案例</li>
             <li>视频中心</li>
           </ul>
         </li>
-        <li>新闻资讯</li>
-        <li>关于我们</li>
-        <li>联系我们</li>
+        <li>
+          <span>新闻资讯</span>
+        </li>
+        <li>
+          <span>关于我们</span>
+        </li>
+        <li>
+          <span>联系我们</span>
+        </li>
       </ul>
     </nav>
   </div>
