--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -22,3 +22,14 @@
   -webkit-align-items: center;
   align-items: center;
 }
+
+.product {
+  width: 1200px;
+  margin: 35px auto;
+  h1 {
+    text-align: center;
+  }
+  .wrap {
+    font-size: 0;
+  }
+}
