--- a/src/app/common/product-profile/productProfile.component.less
+++ b/src/app/common/product-profile/productProfile.component.less
@@ -1,8 +1,45 @@
 .wrap {
+  position: relative;
   display: inline-block;
   width: 20%;
   height: 300px;
   border: 1px solid #e5e5e5;
   margin: -1px 0 0 -1px;
+  padding: 15px;
 
+  .cover {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0 ;
+    background: rgba(0,0,0);
+  }
+
+  .open {
+    opacity: 0.5 !important;
+    cursor: pointer;
+  }
+
+  //&:hover {
+  //  background: rgba(0,0,0,0.5);
+  //  cursor: pointer;
+  //}
+
+  img {
+    display: inline-block;
+    width: 100%;
+    height: auto;
+  }
+
+  h2 {
+    font-size: 15px;
+    color: #323423;
+    margin-top: 10px ;
+    height: 48px;
+    overflow: hidden;
+    line-height: 24px;
+    text-align: center;
+  }
 }
