--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,5 +23,11 @@
       </ng-container>
     </div>
   </section>
+  <section class="news">
+    <h1>新闻中心</h1>
+    <div class="wrap">
+
+    </div>
+  </section>
 </div>
 
