--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -25,7 +25,18 @@
 
 .product {
   width: 1200px;
-  margin: 35px auto;
+  margin: 60px auto 0 auto;
+  h1 {
+    text-align: center;
+  }
+  .wrap {
+    font-size: 0;
+  }
+}
+
+.news {
+  width: 1200px;
+  margin: 60px auto 0 auto;
   h1 {
     text-align: center;
   }
