--- a/client/src/app/header/header.component.less
+++ b/client/src/app/header/header.component.less
@@ -26,6 +26,7 @@ header {
           padding: 0 15px;
           height: 40px;
           line-height: 40px;
+          outline: none;
           span:hover {
             cursor: pointer;
             color: @hover-blue;
