--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -6,7 +6,7 @@
         <li routerLink="/home" routerLinkActive="active">
           <span>首页</span>
         </li>
-        <li routerLink="/product">
+        <li routerLink="/product" routerLinkActive="active">
           <span>产品中心</span>
         </li>
         <li>
