--- a/client/src/app/header/header.component.html
+++ b/client/src/app/header/header.component.html
@@ -9,23 +9,23 @@
         <li routerLink="/product" routerLinkActive="active">
           <span>产品中心</span>
         </li>
-        <li>
+        <li routerLink="/service" routerLinkActive="active">
           <span>服务支持</span>
         </li>
-        <li menu-dropDown>
+        <li routerLink="/application" routerLinkActive="active" menu-dropDown>
           <span>产品应用</span>
           <ul>
             <li>应用案例</li>
             <li>视频中心</li>
           </ul>
         </li>
-        <li>
+        <li routerLink="/news" routerLinkActive="active">
           <span>新闻资讯</span>
         </li>
-        <li>
+        <li routerLink="/about" routerLinkActive="active">
           <span>关于我们</span>
         </li>
-        <li>
+        <li routerLink="/contact" routerLinkActive="active">
           <span>联系我们</span>
         </li>
       </ul>
