--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -1,4 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
+@import "./assets/css/config";
 *{
   margin: 0;
   padding:0;
@@ -7,4 +8,15 @@
 h1 {
   font-size: 30px;
   color: #323232
+}
+
+.papge-header {
+  font-size: 27px;
+  line-height: 1.0;
+  padding: 40px;
+  p {
+    width: 1200px;
+    margin: 0 auto;
+    color: @gray-grade-3;
+  }
 }
