--- a/client/src/styles.less
+++ b/client/src/styles.less
@@ -16,7 +16,11 @@ h1 {
   padding: 40px;
   p {
     width: 1200px;
-    margin: 0 auto;
+    margin: 0 auto;p
     color: @gray-grade-3;
   }
+}
+
+article {
+  position: relative;
 }
