--- a/client/src/app/common/components/product-profile/productProfile.component.html
+++ b/client/src/app/common/components/product-profile/productProfile.component.html
@@ -1,5 +1,5 @@
 <div class="wrap">
   <img src={{imageUrl}}>
   <h2>{{content}}</h2>
-  <div class="cover" menu-dropDown></div>
+  <!--<div class="cover"></div>-->
 </div>
